# rust_embed_play

./: Cargo.toml  README.md
inc/: export_rusts.h  uORB.h
src/: lib.rs  uorb.rs
